# first-gtk-app

./: .gitignore  com.github.marcelovbcfilho.first-gtk-app.yml  meson.build
.github/workflows/: main.yml
data/: first-gtk-app.appdata.xml.in  first-gtk-app.desktop.in
po/: POTFILES  com.github.marcelovbcfilho.first-gtk-app.pot  en.po  pt.po
src/: Application  Application.vala
